CHANGES - 2007-04-18
--------------------

CHANGES IN Mini-XML 2.3

	- Added two exceptions to the LGPL to support static
	  linking of applications against Mini-XML.
	- Added snprintf() emulation function for test program (STR
	  #32)
	- Added the _CRT_SECURE_NO_DEPRECATE definition when
	  building on VC++ 2005 (STR #36)
	- mxmlLoad*() did not detect missing > characters in
	  elements (STR #41)
	- mxmlLoad*() did not detect missing close tags at the end
	  of an XML document (STR #45)
	- Added user_data and ref_count members to mxml_node_t
	  structure.
	- Added mxmlReleaseNode() and mxmlRetainNode() APIs for
	  reference-counted nodes.
	- Added mxmlSetWrapMargin() to control the wrapping of XML
	  output.
	- Added conditional check for EINTR error code for
	  certain Windows compilers that do not define it (STR
	  #33)
	- The mxmldoc program now generates correct HTML 4.0
	  output (previously it generated invalid XHTML...)
	- The mxmldoc program now supports "@deprecated@,
	  "@private@", and "@since version@" comments.
	- Fixed function and enumeration type bugs in mxmldoc.
	- Fixed XML schema for mxmldoc.
	- The mxmldoc program now supports --intro, --section,
	  and --title options.
	- The mxmlLoad*() functions could leak a node on an error
	  (STR #27)
	- The mxml_vsnprintf() function could get in an infinite
	  loop on a buffer overflow (STR #25)
	- Added new mxmlNewCDATA() and mxmlSetCDATA() functions
	  to create and set CDATA nodes, which are really just
	  special element nodes.
	- Added new MXML_IGNORE type and MXML_IGNORE_CB callback
	  to ignore non-element nodes (i.e. whitespace)
	- mxmlLoad*() crashed when reporting an error in some
	  invalid XML (STR #23)


CHANGES IN Mini-XML 2.2.2

	- mxmlLoad*() did not treat custom data as opaque, so
	  whitespace characters would be lost.


CHANGES IN Mini-XML 2.2.1

	- mxmlLoadFd(), mxmlLoadFile(), and mxmlLoadString() now
	  correctly return NULL on error (STR #21)