@@ -4,8 +4,7 @@ README - 2007-04-17
 
 INTRODUCTION
 
-    This README file describes the Mini-XML library version
-    2.4.
+    This README file describes the Mini-XML library version 2.3.
 
     Mini-XML is a small XML parsing library that you can use to
     read XML and XML-like data files in your application without
@@ -184,7 +183,7 @@ GETTING HELP AND REPORTING PROBLEMS
 
 LEGAL STUFF
 
-    The Mini-XML library is Copyright 2003-2005 by Michael Sweet.
+    The Mini-XML library is Copyright 2003-2007 by Michael Sweet.
 
     This library is free software; you can redistribute it
     and/or modify it under the terms of the GNU Library General
